feat: Implement data structures including Binary Tree, Linked List, and Graph with visualization support
- Added BaseDataStructure class as a foundation for all data structures.
- Developed BinaryTreeStructure with insert, delete, search, and traversal functionalities.
- Created LinkedListStructure with methods for insertion, deletion, and searching.
- Implemented GraphStructure supporting nodes and edges, including Dijkstra's algorithm for shortest path.
- Introduced DataStructureFactory for creating different data structures.
- Enhanced visual representation using Three.js for nodes and connections.
- Added animations for insertions, deletions, and searches to improve user experience.

--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "@types/three": "^0.178.1",
+    "three": "^0.178.0",
+    "three-stdlib": "^2.36.0"
   }
 }
